--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,5 +1,18 @@
 #about-me {
-  min-height: 100vh;
+  min-height: 100%;
+  overflow: hidden;
+  position: relative;
+  will-change: transform;
+}
+
+.image-wrapper {
+  width: 65%;
+  height: 60%;
+
+  @media (min-width: 575px) and (max-width: 991px) {
+    width: 60%;
+    height: auto;
+  }
 }
 
 img {
@@ -11,16 +24,6 @@ img {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   filter: sepia(0.2) saturate(1.3) hue-rotate(-10deg);
   opacity: 0.9;
-}
-
-.image-wrapper {
-  width: 65%;
-  height: 50%;
-
-  @media (min-width: 575px) and (max-width: 991px) {
-    width: 60%;
-    height: 60%;
-  }
 }
 
 .scroll-down-message {
