--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
 <div id="contact" class="row section" [@fadeInFadeOut]="isVisible ? 'visible' : 'hidden'">
   <div class="col-12">
-    <div class="row">
+    <div class="row h-100">
       <div class="col-12 d-flex align-items-center justify-content-center contact-col">
         <div class="row">
           <div class="col-12">
