--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,13 @@ html,
 body {
   height: 100%;
   width: 100%;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   color: $rose-color;
+  scroll-behavior: smooth;
+  overflow: hidden;
+  touch-action: none;
+  position: fixed;
 }
 
 body {
