added new education section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid h-100 main-container">
   <app-about-me></app-about-me>
   <app-experience></app-experience>
+  <app-education></app-education>
   <app-contact></app-contact>
 </div>
