--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,10 +3,10 @@
   <div class="col-lg-5 col-md-6 col-sm-6 col-12 d-flex align-items-center justify-content-center"
     [@slideInLeft]="!isMobile ? (isVisible ? 'visible' : 'hidden') : null"
     [@fadeInFadeOut]="isMobile ? (isVisible ? 'visible' : 'hidden') : null">
-    <div class="">
+    <div>
       <h1>Hello!</h1>
       <h1>I'm Rita.</h1>
-      <p>I'm a dynamic pharmacist with a background in clinical research, drug development, and
+      <p>I'm a dynamic pharmacist with a background in medical affairs, clinical research, drug development, and
         healthcare communication. I'm also experienced in engaging with healthcare professionals to deliver
         scientific data and support evidence-based decisions.</p>
       <p>Skilled in patient education, treatment compliance, and pharmaceutical logistics.</p>
