--- a/src/app/experience/experience.component.scss
+++ b/src/app/experience/experience.component.scss
@@ -48,7 +48,8 @@ $rose-color: #a66674;
   transition: background-color 0.3s ease;
 }
 
-.node:hover {
+.timeline-node:hover .node,
+.experience-label:hover~.node {
   transform: scale(1.3);
 }
 
@@ -59,6 +60,7 @@ $rose-color: #a66674;
 .experience-label {
   margin-left: 10px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .experience-label>* {
